# driftward-data

./: .gitignore  README.md  pyproject.toml
.claude/agents/: readme-aware-coder.md
src/driftward_data/: definitions.py
src/driftward_data/defs/: __init__.py  assets.py  jobs.py  resources.py
src/driftward_data/defs/assets/: __init__.py  raw_sba_foia_7a_loans.py  sba_foia_raw.py  stg_sba_foia_7a_loans.py
src/driftward_data/defs/checks/: __init__.py  raw_sba_foia_7a_loans_checks.py  stg_sba_foia_7a_loans_checks.py
src/driftward_data/defs/shared/: __init__.py  constants.py  schemas.py
