[project]
name = "driftward_data"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.12.2",
    "dagster-dg-cli>=1.12.2",
    "dagster-gcp>=0.28.2",
    "dagster-webserver>=1.12.2",
    "pandas>=2.3.3",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "driftward_data"
registry_modules = [
    "driftward_data.components.*",
]


